--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #ff758c, #ff7eb3);
+  background: linear-gradient(-45deg, #ff758c, #ff7eb3, #ffb199, #ff0844);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
   font-family: Arial, sans-serif;
   text-align: center;
+  color: white;
+}
+
+@keyframes gradientBG {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
 }
 
 .container {
@@ -24,9 +33,24 @@ body {
 }
 
 h1 {
-  color: white;
   font-size: 1.8rem;
-  padding: 0 20px;
+  animation: bounce 1.5s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {transform: translateY(0);}
+  50% {transform: translateY(-10px);}
+}
+
+.hen {
+  font-size: 70px;
+  margin: 10px 0;
+  animation: shake 1s infinite alternate;
+}
+
+@keyframes shake {
+  0% { transform: rotate(-10deg); }
+  100% { transform: rotate(10deg); }
 }
 
 .buttons {
@@ -61,25 +85,23 @@ button {
 
 .message {
   margin-top: 30px;
-  font-size: 1.8rem;
-  color: white;
+  font-size: 2rem;
   display: none;
 }
 
-/* Floating Hearts */
-.heart {
+.heart, .sparkle {
   position: absolute;
-  color: white;
-  animation: float 5s linear infinite;
-  opacity: 0.7;
+  animation: floatUp linear infinite;
 }
 
-@keyframes float {
+@keyframes floatUp {
   0% {
     transform: translateY(100vh) scale(1);
+    opacity: 1;
   }
   100% {
     transform: translateY(-10vh) scale(1.5);
+    opacity: 0;
   }
 }
 </style>
@@ -90,13 +112,16 @@ button {
 <div class="container">
   <h1>Will You Be My Valentine? 💖</h1>
 
+  <!-- STRIKING HEN EMOJI -->
+  <div class="hen">🐔✨</div>
+
   <div class="buttons">
     <button id="yesBtn">Yes 😍</button>
     <button id="noBtn">No 😢</button>
   </div>
 
   <div class="message" id="loveMessage">
-    YAYYY ❤️🥰 I love youuuuu!!
+    YAYYY ❤️🥰 Even the hen approves!! 🐔💘
   </div>
 </div>
 
@@ -111,49 +136,48 @@ function moveNoButton() {
   const maxX = window.innerWidth - noBtn.offsetWidth;
   const maxY = window.innerHeight - noBtn.offsetHeight;
 
-  const randomX = Math.random() * maxX;
-  const randomY = Math.random() * maxY;
-
-  noBtn.style.left = randomX + "px";
-  noBtn.style.top = randomY + "px";
+  noBtn.style.left = Math.random() * maxX + "px";
+  noBtn.style.top = Math.random() * maxY + "px";
 }
 
 function growYesButton() {
-  yesScale += 0.2;
+  yesScale += 0.25;
   yesBtn.style.transform = `translateX(-120%) scale(${yesScale})`;
 }
 
-// Mobile touch support
 noBtn.addEventListener("touchstart", moveNoButton);
 noBtn.addEventListener("mouseover", moveNoButton);
 noBtn.addEventListener("click", moveNoButton);
+
+noBtn.addEventListener("touchstart", growYesButton);
+noBtn.addEventListener("mouseover", growYesButton);
 
 yesBtn.addEventListener("click", () => {
   message.style.display = "block";
   yesBtn.style.display = "none";
   noBtn.style.display = "none";
+  launchConfetti();
 });
 
-// Grow yes button whenever No is tapped
-noBtn.addEventListener("touchstart", growYesButton);
-noBtn.addEventListener("mouseover", growYesButton);
-
-// Floating hearts generator
-function createHeart() {
-  const heart = document.createElement("div");
-  heart.classList.add("heart");
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = Math.random() * 20 + 20 + "px";
-  heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-  document.body.appendChild(heart);
-
-  setTimeout(() => {
-    heart.remove();
-  }, 5000);
+function createFloating(symbol, className) {
+  const el = document.createElement("div");
+  el.classList.add(className);
+  el.innerHTML = symbol;
+  el.style.left = Math.random() * 100 + "vw";
+  el.style.fontSize = Math.random() * 20 + 20 + "px";
+  el.style.animationDuration = (Math.random() * 3 + 2) + "s";
+  document.body.appendChild(el);
+  setTimeout(() => el.remove(), 5000);
 }
 
-setInterval(createHeart, 500);
+setInterval(() => createFloating("❤️", "heart"), 400);
+setInterval(() => createFloating("✨", "sparkle"), 700);
+
+function launchConfetti() {
+  for (let i = 0; i < 40; i++) {
+    createFloating("🎉", "sparkle");
+  }
+}
 </script>
 
 </body>
