--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ button {
   </div>
 
   <div class="message" id="loveMessage">
-    🎉 Best decision of your life Anji. No refunds 💖
+    🎉 Best decision of your life munchkin. No refunds 💖
   </div>
 </div>
 
